Fix code style and warnings 修复代码样式和警告 (#4321)
* chore(style): fix code style and warnings

* fix: fix *valid* bug

* chore(style): fix checkstyle

* fix(merge): remove side effects when merge confict